--- a/LMS/templates/faculty_dashboard.html
+++ b/LMS/templates/faculty_dashboard.html
@@ -29,7 +29,7 @@
             box-sizing: border-box;
         }
 
-        .Image122 {
+        .ilogo {
             width: 165px;
             height: auto;
         }
