--- a/LMS/static/login.css
+++ b/LMS/static/login.css
@@ -34,8 +34,8 @@ select {
 }
 
 button {
-    background-color: #02054E;
-    color: #fff;
+    background-color: #A086AD;
+    color: #1f0615;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
@@ -43,5 +43,11 @@ button {
 }
 
 button:hover {
-    background-color: #004080;
+    background-color: #1f0615;
+    color: #A086AD; /* Add text color change on hover if needed */
+}
+
+form button:hover {
+    background-color: #1f0615;
+    color: #A086AD; /* Add text color change on hover if needed */
 }
